Cambie la palabra buscar en english

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body class="bg-primary"> 
     <div class="navbar d-flex">
         <div> 
-            <img src="IMAGEN/LOGO.jpg" width="40%" alt="Imagen de Prueba">   
+            <img src="IMAGEN/LOGO.jpg" width="20%" alt="Imagen de Prueba">   
         
         </div>
         <div> 
-                <input class="search bg-primary" type="search" placeholder="Buscar....">    
+                <input class="search bg-primary" type="search" placeholder="Search....">    
         </div>
             <div class="iconos d-flex"> 
                 <div class="icon"> <i class="fas fa-home" ></i> </div>
